tests/compile/use_after_free.stderr
error[E0499]: cannot borrow `client` as mutable more than once at a time
  --> tests/compile/use_after_free.rs:20:15
   |
12 |     let txn = client.transaction(&db);
   |               ------ first mutable borrow occurs here
...
20 |     let txn = client.transaction(&db);
   |               ^^^^^^ second mutable borrow occurs here
21 |     for item in items {
   |                 ----- first borrow later used here
